src/components/epic-panel/epic-panel.css
:host {
  display: block;
  width: 250px;      
  max-width: 100%;  
}

.box {
  padding: 12px;
  border: 1px solid #e0e0e0;
  background-color: #f7f7f7;
  display: flex;
  flex-direction: column;
  max-height: 80vh;
  overflow-y: scroll;
}

.new-epic-button{
  padding: 30px;
  width: 70%;
  margin-left: 30px;
  margin-right: 30px;
  text-align: center;
}

.new-epic-button:hover{
  background-color: #e0e0e0;
  border-radius: 30px;
}

input{
  width: 100%;
  border: green 2px solid;
  padding: 10px;
}

